2003-04-04  Stephane Carrez  <stcarrez@nerim.fr>

	* elf32-m68hc11.c (m68hc11_elf_relax_delete_bytes): Also adjust
	symbols that mark the end of the section.
	(m68hc11_elf_relax_section): Use R_M68HC11_PCREL_8 relocs when
	converting to a relative branch so that the offset is computed after
	the relaxation; also relocate a jsr into a bsr if possible but don't
	relax them if they are to a far symbol as we need to call the
	trampoline code.
	(elf_m68hc11_howto_table): Set pcrel_offset to true.

2003-04-04  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* archures.c: Namespace cleanup. Rename bfd_mach_c3x to
	bfd_mach_tic3x and bfd_mach_c4x to bfd_mach_tic4x
	* bfd-in2.h: Regenerate
	* coff-tic4x.c: Namespace cleanup. Replace s/c4x/tic4x/
	* cpu-tic4x.c: Ditto

2003-04-03  Nick Clifton  <nickc@redhat.com>

	* peXXigen.c (_bfd_XXi_swap_scnhdr_out): Compute ps and ss
	differently for object files and executables.
	* peicode.h (coff_swap_scnhdr_in): Only set the s_size field
	for object files or for executables who have not already
	initialised the field.
	* libpei.h (bfd_pe_executable_p): New macro.  Return true if
	the PE format bfd is an executable.

2003-04-03  Alan Modra  <amodra@bigpond.net.au>

	* elf32-ppc.c (ppc_elf_check_relocs): Don't use SYMBOL_REFERENCES_LOCAL
	here as it's too early to reliably determine locality.
	(ppc_elf_gc_sweep_hook): Likewise.
	(SYMBOL_REFERENCES_LOCAL): Expand comment.

2003-04-02  Bob Wilson  <bob.wilson@acm.org>

	* xtensa-modules.c: Remove comment indicating that this is a
	generated file.

2003-04-02  Alan Modra  <amodra@bigpond.net.au>

	* elfxx-mips.c (_bfd_mips_elf_hide_symbol): Test for NULL dynobj.

2003-04-01  Bob Wilson  <bob.wilson@acm.org>

        * Makefile.am (ALL_MACHINES): Add cpu-xtensa.lo.
        (ALL_MACHINES_CFILES): Add cpu-xtensa.c.
        (BFD32_BACKENDS): Add elf32-xtensa.lo, xtensa-isa.lo, and
        xtensa-modules.lo.
        (BFD32_BACKENDS_CFILES): Add elf32-xtensa.c, xtensa-isa.c, and